--- a/src/css/home.css
+++ b/src/css/home.css
@@ -15,6 +15,17 @@ display: flex;
 align-items: center;
 justify-content:center
 }
+._319wph {
+    padding: 1px 4px;
+    margin-right: 8px;
+    line-height: 12px;
+    vertical-align: middle;
+    color: #ee4d2d;
+    font-size: 10px;
+    border: 1px solid;
+    border-radius: 2px;
+    font-weight: 400;
+}
 .button-no-outline, .icon-button, .image-button {
     outline: none;
     cursor: pointer;
