--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1451,6 +1451,10 @@ z-index:1000
     justify-content: center;
     box-sizing: border-box;
   }
+  .chat-pages-index__root:hover{
+    cursor: pointer;
+    background-color: rgba(231, 227, 227, 0.54);
+  }
   .chat-pages-index__avatar{
     width: 32px;
     min-width: 32px;
