--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -787,6 +787,363 @@ z-index:1000
   max-height: 800px;
   
 }
+.src-components-index__tabs--Y19NK{
+  width: 100%;
+  height: 33px;
+  display: flex;
+  padding: 0 16px;
+  box-sizing: border-box;
+  align-items: center;
+  border-bottom: 1px solid #f1f3f4;
+}
+._3vLtzAtDd0qclx5tZzPjE1 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.VVy7Epss6jbZON_gAV8DL {
+  flex-shrink: 0;
+}
+._2FJYtfdtHjeRTnhvvl2K60 {
+  color: #333;
+  padding: 10px 0 9px;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 600;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-right: 24px;
+  text-overflow: ellipsis;
+}
+._3QOGROVLeZnXLm4tuSQ1mw {
+  display: flex;
+  align-items: center;
+}
+._2SUuRqTi0kYb8yVs0qG7Vy {
+  width: 14px;
+  min-width: 14px;
+  height: 14px;
+}
+._29uoglXEwg_2RaVW0_CFBG img {
+  width: 100%;
+  height: 100%;
+}
+._29uoglXEwg_2RaVW0_CFBG {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+._2xGjvAuHdCo364lNgvhQYC {
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  border-radius: 2px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background: rgba(238, 77, 45, 0.15);
+  font-weight: 500;
+  font-size: 0;
+}
+.src-components-index__main--RhtCG{
+  flex: 1;
+  overflow: hidden;
+}
+.Wm99cbuMTHUN-lPHdXJcw {
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+  box-sizing: border-box;
+  flex: 0 0 auto;
+}
+.Cgb3ZVppxcdV9lpRAtf_Z._1DNCoJpKBYj0FIH4kdEoQ2 {
+  border: 1px solid #4185f4;
+}
+.Cgb3ZVppxcdV9lpRAtf_Z {
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 1px solid transparent;
+  background: #f4f4f6;
+  border-radius: 2px;
+}
+._3oQvjrwelQNbCCFf7TLCw2 {
+  position: relative;
+  border: none;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 0 0 2.36em;
+  background: transparent;
+  font-size: 14px;
+  line-height: 16px;
+  z-index: 10;
+  padding-right: 30px;
+}
+.eFqTfAmTMJ6cXc3Y2pFCG {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  z-index: 9;
+  border: 1px solid transparent;
+  background: #f4f4f6;
+}
+._3d4w9o9pz5PFzKbRKZsBnn {
+  width: 2.36em;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+._2w7NPuMDjqdQj1bLEtEyn3 {
+    height: 14px;
+    width: 14px;
+    color: #bbb;
+}
+._3kEAcT1Mk5 {
+    display: inline-block;
+    line-height: 0;
+    fill: currentColor;
+}
+._1DGA-XJjpraK9hM8eikWlD {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #fff;
+  margin-top: 4px;
+  padding: 0 16px;
+  box-sizing: border-box;
+}
+._1xYuf-CUfbCu2l4v3KD11l {
+  display: flex;
+  align-items: flex-start;
+  padding: 8px 0;
+}
+._2xTkYOoqGC3DJpd0pTYF66 {
+  flex: 0 0 auto;
+  width: 32px;
+  height: 32px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+._2c8yVDz8vsa8w41K7EsTMn {
+  flex: 1;
+  margin-left: 8px;
+  width: 0;
+}
+._1Cq62Bf6tvJC3Bf6efiMj7 {
+  width: 100%;
+  font-size: 12px;
+  color: #333;
+  letter-spacing: 0;
+  font-weight: 500;
+}
+._3a6r65Fja-PAPufuq_uQ6I {
+  font-size: 10px;
+  color: #bbb;
+  letter-spacing: 0;
+  text-decoration: line-through;
+}
+._31xcV2AYAe7PQCE5go9tBW {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  box-sizing: border-box;
+  -ms-scroll-chaining: none;
+  overscroll-behavior: contain;
+}
+._2_gLCkJ8OCG2K6t27pYdD2 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    height: 36px;
+    border-top: 1px dashed #f1f3f4;
+}
+._2Al9UPDLsxMEfnJkCa3HQD {
+  background: #ee4d2d;
+  padding: 3px 9px;
+  border-radius: 2px;
+  font-size: 12px;
+  color: #fff;
+  cursor: pointer;
+}
+._3bQkg0Y5mVCrvuPfuQSEM- {
+  display: flex;
+  align-items: center;
+  font-family: 'RobotoRegular', sans-serif;
+  font-size: 12px;
+  color: #888;
+  letter-spacing: 0;
+}
+._10VxDOhu-xe6SAa18uZyqh {
+  display: flex;
+  align-items: center;
+}
+._10VxDOhu-xe6SAa18uZyqh::after {
+  display: inline-block;
+  content: '';
+  width: 1px;
+  height: 10px;
+  margin: 0 8px;
+  background: #ccc;
+}
+._3-vMpVByDVfsbNbjW0Gevd {
+  flex: 1;
+  width: 100%;
+  overflow: hidden;
+}
+._3gFaGjBODalETgK02YnB_F {
+  font-size: 12px;
+  color: #333;
+  letter-spacing: 0;
+  margin-top: 4px;
+}
+.src-modules-index__container--2BjL8{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+._2KOj5VuVuj4vllVcc2JdME {
+  color: #ee4d2d;
+  font-weight: 600;
+  padding-bottom: 7px;
+  border-bottom: 2px solid #ee4d2d;
+}
+
+._7-BLd7BF4x {
+    flex: 1;
+    overflow: hidden;
+}
+.xaMUYIRSRlS1WYaJbpOwG._1-jFwlhhdMvfDXAJH72LUv {
+  border-color: #d6e5ff;
+}
+.xaMUYIRSRlS1WYaJbpOwG {
+}
+.DAgS9n3scQ7kWR3b9O-Va {
+  cursor: pointer;
+}
+._2IM8caVK5bv3GniwHQxIv4 {
+  background-color: #fff;
+  border-radius: 2px;
+  box-sizing: border-box;
+  transition: all 0.2s ease;
+  border: 0.25em solid #f1f3f4;
+  font-size: 16px;
+  width: 15em;
+}
+.x9sshLfmzEnXDsbF57Qmx {
+  background-color: white;
+  height: 3.5625em;
+  box-sizing: content-box;
+}
+._2j0RH_nXNLwh2Q73wyiUu7 {
+  width: calc(100% - 1em);
+  padding: 0.5em;
+}
+._3-nmomaD6LPerIxLhiPYxJ {
+  margin-bottom: 0.5em;
+  transform: scale(0.91) translateX(-8px);
+}
+._3PPerJ_xDR4sC-MObqPua0 {
+  font-size: 12px;
+  line-height: 14px;
+  color: #555;
+}
+._34yQfy01N86VpubvG6CS4a {
+  height: 2em;
+}
+._2koJrpCamdLkmdKUGhwdKU {
+  width: 100%;
+  position: relative;
+}
+._2PjYtS6WFYVM7M2Q5IAr5U {
+  height: 100%;
+  cursor: pointer;
+}
+._3-NQ41O_LLyQ367SS_0dcY {
+  width: 2em;
+  height: 2em;
+}
+.UMm4MDR5mkB_ctVxJocZq {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.UMm4MDR5mkB_ctVxJocZq > img {
+  width: 100%;
+  height: 100%;
+}
+.xrgygwVVBiOr5X2mHjO92 {
+  box-sizing: content-box;
+  height: calc(2em - 2px);
+  width: calc(2em - 2px);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+._3I8LHfvixxTAYbK5RR8_SI {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #f5f5f5;
+  background: transparent;
+}
+.MK4RAJcIfHxp1tEXQDzts {
+  margin-left: 2.5em;
+}
+.ITzmll2K9ovLC9mx6zS62 {
+  height: 100%;
+}
+._1IsSL6qNYQwomYLW5H4pW1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+._1zCv57JLI668_Ek5DSiDDH {
+  font-size: 12px;
+  line-height: 14px;
+  white-space: nowrap;
+  width: 100%;
+}
+._3qYzFdZiOTp_Rfs0EvFcUZ {
+  color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.GIqgeOS-QZ5DGb-i8L8qg._3OFGwHwOoNti2VXQOaGl2m {
+  margin-top: 3px;
+}
+._1BDeEH9Fg1p0_-0lSNOrc0 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.GIqgeOS-QZ5DGb-i8L8qg {
+  font-size: 12px;
+  line-height: 14px;
+  white-space: nowrap;
+}
+._3cL3bjO1xbF4C-mj5bENVs {
+  color: #ee4d2d;
+  font-weight: 700;
+  display: flex;
+  margin-top: 3px;
+  width: 100%;
+}
 .src-components-index__root--3vLtz{
   width: 328px;
     height: 290px;
