--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1087,10 +1087,15 @@
   .ball {
       background-color: #ee4d2d;;
       border-radius: 50%;
-      margin: 5px;
+      margin: 4px;
       height: 10px;
       width: 10px;
       animation: jump .5s ease-in infinite;
+  }
+  .jHfK1c-Py0hqmZG0XqDnq .ball{
+    height: 6px;
+    width: 6px;
+    margin: 2px;
   }
   ._2n4gHk:last-child {
       margin-bottom: 0;
