--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1184,7 +1184,57 @@ z-index:1000
   border-top: 1px solid #f0f0f0;
   margin: 0 16px;
 }
-
+._2W3Iet0mGFIq6IUDMQmvsO {
+    display: flex;
+    padding-top: 8px;
+    justify-content: flex-end;
+}
+._2W3Iet0mGFIq6IUDMQmvsO ._3cCj5d3lfdLnipY98e6s-p {
+  color: #ee4d2d;
+  cursor: pointer;
+  border: 1px solid rgba(238, 77, 45, 0.6);
+  padding: 3px 8px;
+  line-height: 14px;
+  margin-right: 12px;
+  border-radius: 2px;
+}
+._2W3Iet0mGFIq6IUDMQmvsO ._3cCj5d3lfdLnipY98e6s-p:last-child {
+  color: #fff;
+  background: #ee4d2d;
+  margin-right: 0;
+}
+._2W3Iet0mGFIq6IUDMQmvsO ._3cCj5d3lfdLnipY98e6s-p {
+  color: #ee4d2d;
+  cursor: pointer;
+  border: 1px solid rgba(238, 77, 45, 0.6);
+  padding: 3px 8px;
+  line-height: 14px;
+  margin-right: 12px;
+  border-radius: 2px;
+}
+._1G14ELBfgOp33yi2WfA5WU {
+  cursor: pointer;
+  display: flex;
+  margin: -8px 0 8px;
+  transform: scale(0.91);
+  align-items: center;
+  justify-content: center;
+}
+._1G14ELBfgOp33yi2WfA5WU ._9vMeEtVFXFcu-y2a-vaI {
+  color: #3b5893;
+  line-height: 14px;
+  margin-right: 4px;
+}
+._3OohKJpPZFYR_L0v-dcZFV {
+  width: 12px;
+  height: 12px;
+  color: #d8d8d8;
+}
+._3kEAcT1Mk5 {
+  display: inline-block;
+  line-height: 0;
+  fill: currentColor;
+}
 ._3cyrFIvvEl {
   color: #333;
   display: flex;
