--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1199,11 +1199,524 @@
   color: #ee4d2d;
   flex: 1 0 auto;
 }
+._91rKmd {
+    height: 160px;
+    margin-left: 35px;
+    margin-right: 35px;
+    align-self: flex-start;
+}
+.Z6vh\+w {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 8px;
+  height: 6px;
+  display: inline-block;
+  vertical-align: middle;
+  background: none;
+  padding: 0;
+  border: 4px solid transparent;
+  border-top: 6px solid rgba(0,0,0,.54);
+  border-bottom: 0;
+  margin-left: 5px;
+}
+.bdRKsm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0,0,0,.54);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.bdRKsm, .Krn1TB .stardust-popover__target {
+  height: 100%;
+}
+.bdRKsm, .Krn1TB .stardust-popover__target {
+  height: 100%;
+}
 .\+\+PvFX, .SdJ6yI {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
+}
+._6Uy99D {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 200px;
+    border-left: 0.5px solid rgba(0,0,0,.09);
+    margin-left: 20px;
+    padding: 0 20px;
+}
+.L76BvI {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row-gap: 2px;
+  grid-column-gap: 4px;
+  overflow: hidden;
+  line-height: 17px;
+  align-items: flex-end;
+}
+.gju3A3 {
+  display: flex;
+  overflow: hidden;
+}
+.gju3A3 ._1jxndi {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  color: rgba(0,0,0,.26);
+  text-decoration: line-through;
+  margin-right: 2px;
+  flex-shrink: 1;
+}
+.gju3A3 .khJuax {
+  white-space: nowrap;
+  flex: 0;
+}
+.theme--ofs ._8AoNvW, .theme--ofs .eK2OYx, .theme--s-mart ._8AoNvW, .theme--s-mart .eK2OYx {
+  color: #d0011b;
+}
+._8AoNvW, .eK2OYx {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #ee4d2d;
+}
+._12INAk {
+  height: 16px;
+  width: 16px;
+  color: currentColor;
+  stroke: currentColor;
+  margin-right: 7px;
+}
+.x94sjQ {
+    display: flex;
+    align-items: center;
+}
+.oGEqYd {
+  display: flex;
+  align-items: center;
+}
+.vEKlNi {
+  font-size: 14px;
+  color: #ee4d2d;
+  color: var(--brand-primary-color,#ee4d2d);
+  cursor: pointer;
+  text-transform: capitalize;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+}
+.lt31pc {
+  background: #fff;
+  max-width: 1200px;
+  margin-top: 12px;
+  padding: 24px 30px;
+}
+._6WzJJS {
+  display: flex;
+  justify-content: flex-start;
+  font-weight: 400;
+  align-items: center;
+  margin: 0;
+  font-size: 18px;
+  line-height: 21px;
+  color: #222;
+}
+.ADFE0a {
+  padding: 0;
+  margin: 20px -10px 0;
+}
+.vDYt3H {
+  list-style: none;
+  display: inline-block;
+  width: 16.666%;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+.jwWEwt {
+  position: relative;
+}
+.zLenew {
+  padding-top: 100%;
+}
+.zLenew, .zXlvoH {
+  width: 100%;
+}
+.fj1aPh {
+  opacity: 1;
+  transition: opacity .2s ease;
+}
+.efbOsy {
+  margin: 6px 0 9px;
+  font-size: 14px;
+  color: rgba(0,0,0,.8);
+  line-height: 16px;
+  height: 32px;
+}
+.AZqucp {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  color: #000;
+}
+.vmbY7Y {
+  margin-bottom: 1px;
+}
+._6H32eD {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: #d0011b;
+  border-radius: 2px;
+  padding: 2px 3px;
+  margin-right: 5px;
+  vertical-align: middle;
+  line-height: 12px;
+}
+.vmbY7Y>svg {
+  display: block;
+  fill: #fff;
+  width: 24px;
+  height: 11px;
+}
+.mx6hDy, .mx6hDy del {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mx6hDy {
+
+  display: flex;
+}
+.mx6hDy del {
+  color: rgba(0,0,0,.54);
+  margin-right: 8px;
+  min-width: 0;
+}
+.mx6hDy, .mx6hDy del {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mx6hDy em {
+  font-style: normal;
+  color: #ee4d2d;
+}
+.theme--ofs .mx6hDy em, .theme--s-mart .mx6hDy em {
+  color: #d0011b;
+}
+.e0VUM0 {
+  margin-left: 15px;
+}
+.cMyLWR, .YdRCuG {
+  color: #ee4d2d;
+  color: var(--brand-primary-color,#ee4d2d);
+}
+.cMyLWR {
+  border: 1px solid #ee4d2d;
+  border-radius: 1px;
+  padding: 0 5px;
+  font-size: 12px;
+  max-width: 600px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  height: 18px;
+  line-height: 18px;
+  border-color: #ee4d2d;
+  border-color: var(--brand-primary-color,#ee4d2d);
+}
+._1ipus9 {
+  margin-left: auto;
+  flex-shrink: 0;
+}
+.CRN1qh {
+  margin-left: 10px;
+}
+.VUCDM7 {
+    width: 1200px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+._46epaO:not(:nth-child(4n)), .N8hR\+F:not(:nth-child(4n)) {
+    margin-right: 1%;
+}
+._46epaO, .N8hR\+F {
+    width: 24.25%;
+}
+.B3\+pb\+ {
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 5%);
+    border-radius: 0.125rem;
+    overflow: hidden;
+    background-color: #fff;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 10px;
+    z-index: 1;
+}
+.PMpbYz {
+  text-decoration: none;
+  color: rgba(0,0,0,.87);
+  display: block;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.cmjSHU, .qifRic {
+  width: 280px;
+  height: 280px;
+}
+.FSzItq {
+  margin: 5px auto;
+  position: relative;
+}
+.na4vkv, .qOUKdN {
+  width: 280px;
+  height: 280px;
+}
+._6y1ec4 {
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+.LKoGAt {
+  opacity: 1;
+  transition: opacity .2s ease;
+}
+.DKMfci {
+  position: relative;
+}
+._8\+rkhW {
+  width: 100%;
+  padding-top: 100%;
+  background-position: 50%;
+}
+._5W9sdV {
+  min-height: calc(2.4em + 24px);
+}
+.LERASq {
+  display: flex;
+  font-size: 16px;
+  margin: 10px 15px auto;
+  height: 2.4em;
+  line-height: 1.2em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border-bottom: 10px solid transparent;
+}
+._3pphAa, .OHv6Qr {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+}
+.OHv6Qr {
+  -webkit-line-clamp: 3;
+  height: 3.6em;
+}
+.IKgh3U {
+  padding: 0 15px;
+  color: rgba(0,0,0,.13);
+  text-decoration: line-through;
+}
+._02pRMf {
+  padding: 0 15px 15px;
+  display: flex;
+  align-items: flex-end;
+}
+._6C-j0b {
+  flex: 1 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+._7nOJu6, .PV1fAR, .sQmr2P {
+  font-size: 18px;
+}
+.dgZNpS {
+  color: #ee4d2d;
+  font-weight: 400;
+}
+.FH50xK {
+  padding-right: 10px;
+}
+
+
+.HIIASx {
+    height: 16px;
+    background: url(https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/flashsale/ac7f81d9ee062223753413ec98497a86.png) 0 100% no-repeat;
+    background-size: cover;
+    position: relative;
+    border-radius: 8px;
+}
+.\+BapII {
+  width: 17px;
+  height: 17px;
+  margin-left: auto;
+  margin-right: 6px;
+}
+.Suic9m {
+  text-transform: uppercase;
+  margin-right: 0.625rem;
+  font-weight: lighter;
+}
+.countdown-timer {
+  -webkit-backface-visibility: hidden;
+  /* backface-visibility: hidden; */
+  cursor: default;
+  display: flex;
+  color: #000;
+  align-items: center;
+}
+.Ygavkn {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #fff;
+  z-index: 2;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+.Xm0-Ex, .Ygavkn {
+  position: absolute;
+}
+.NiQ2DI {
+  width: 100%;
+  background: transparent;
+  overflow: hidden;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+  height: 16px;
+  border-radius: 8px;
+}
+.NwnNg9 {
+  background: #fff;
+  float: right;
+  position: relative;
+  height: 18px;
+}
+.zYeAeX {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ffbda6;
+}
+.fQZ-l0 {
+  text-decoration: none;
+  display: block;
+  background-color: #ee4d2d;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 200;
+  width: 88px;
+  height: 41px;
+  line-height: 41px;
+  text-align: center;
+  border: 0;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+  flex-shrink: 0;
+  margin-left: 10px;
+}
+.aS\+-QV {
+    -webkit-transform: scale(1.4);
+    transform: scale(1.4);
+    padding: 7px 8px;
+    font-weight: 400;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3;
+}
+.X7gzZ7 {
+  background-color: rgba(255,212,36,.9);
+}
+.yV54ZD {
+  width: 36px;
+  height: 32px;
+}
+._5ICO3M {
+  display: inline-block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
+  padding: 4px 2px 3px;
+  font-weight: 700;
+}
+._8PundJ {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+  font-weight: 400;
+  line-height: .8125rem;
+  color: #ee4d2d;
+  text-transform: uppercase;
+  font-size: .75rem;
+}
+.X7gzZ7:after {
+  content: "";
+  width: 0;
+  height: 0;
+  left: 0;
+  bottom: -4px;
+  position: absolute;
+  border-color: transparent rgba(255,212,36,.9);
+  border-style: solid;
+  border-width: 0 18px 4px;
+}
+.tSV5KQ {
+  color: #fff;
+}
+.YdRCuG {
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  text-transform: capitalize;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.JoCEu1 {
+    width: 95px;
+}
+button.Yzvdc0 {
+  font-family: HelveticaNeueMedium,HelveticaNeue-Medium,Helvetica Neue Medium,Helvetica Neue,Arial Bold,arial,sans-serif;
+  text-transform: capitalize;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 140px;
+  max-width: 200px;
+  height: 40px;
+  padding: 1px 16px;
+}
+button._0FecFw {
+  margin-top: 6px;
+  color: var(--brand-primary-color);
+  background-color: rgba(208,1,27,0.08);
+  border-color: var(--brand-primary-color);
 }
 ._2n4gHk:last-child {
       margin-bottom: 0;
@@ -4976,7 +5489,6 @@
   .price__flash-sale{
   padding: 1rem;
   background: rgb(250, 250, 250);
-  width: 90%;
   }
   
   .flash-sale-logo{
@@ -5244,14 +5756,13 @@
     color: #ee4d2d;
     font-weight: 600;
     font-size: 0.75rem;
-    line-height: 1.6rem;
+    line-height: 1.125rem;
   }
   .home-product-item__sale-off-label {
     color: var(--white-color);
     font-size: 0.75rem;
-    line-height: 1.6rem;
     position: relative;
-    top: -10px;
+   
     font-weight: 600;
   }
   
